<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">Quake Buddy</string>
    <string name="display_in_view_quantity" translatable="false">50</string>
    <string name="near_the">Near the</string>
    <string name="tsunami_header">Check for Tsunamis</string>
    <string name="no_earthquakes">Great scott! No earthquakes!</string>
    <string name="no_internet_connection">Great scott! No internet!</string>
    <string name="error_invalid_url">Could not load earthquake URL!</string>
    <string name="settings_menu_tsunami_watch">Tsunami watch</string>
    <string name="settings_menu_settings">Settings</string>
    <string name="settings_menu_version_log">Version log</string>
    <string name="settings_menu_rate_app">Rate this app</string>
    <string name="settings_share">Share</string>
    <string name="settings_open_browser">Open in browser</string>
    <string name="settings_title">Earthquake Settings</string>
    <string name="setting_category_filters">Filters</string>
    <string name="setting_category_display">Display</string>
    <string name="settings_time_period_label">Time Range</string>
    <string name="settings_time_period_key" translatable="false">time_period</string>
    <string name="settings_time_period_default" translatable="false">@string/settings_time_period_week_value</string>
    <string name="settings_time_period_24_label">up to 24 Hours</string>
    <string name="settings_time_period_24_value" translatable="false">24</string>
    <string name="settings_time_period_48_label">up to 48 Hours</string>
    <string name="settings_time_period_48_value" translatable="false">48</string>
    <string name="settings_time_period_week_label">within this Week</string>
    <string name="settings_time_period_week_value" translatable="false">7</string>
    <string name="settings_time_period_fortnight_label">within this Fortnight</string>
    <string name="settings_time_period_fortnight_value" translatable="false">14</string>
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">5</string>
    <string name="settings_time_display_label">Time Preference</string>
    <string name="settings_time_display_key" translatable="false">time_preference</string>
    <string name="settings_time_display_default" translatable="false">@string/settings_time_display_ago_value</string>
    <string name="settings_time_display_ago_label">Ago format</string>
    <string name="settings_time_display_ago_value" translatable="false">ago</string>
    <string name="settings_time_display_standard_label">Standard locale</string>
    <string name="settings_time_display_standard_value" translatable="false">standard</string>
    <string name="settings_tsunami_watch_theme_label">Tsunami Watch Theme (last 24 hours)</string>
    <string name="settings_tsunami_watch_theme_key" translatable="false">tsunami_watch_theme</string>
    <string name="settings_tsunami_watch_theme_default" translatable="false">@string/settings_tsunami_watch_theme_off_value</string>
    <string name="settings_tsunami_watch_theme_on_label">On</string>
    <string name="settings_tsunami_watch_theme_on_value" translatable="false">enabled</string>
    <string name="settings_tsunami_watch_theme_off_label">Off</string>
    <string name="settings_tsunami_watch_theme_off_value" translatable="false">disabled</string>

</resources>